--- a/Report/report_v5.tex
+++ b/Report/report_v5.tex
@@ -140,12 +140,12 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \section{Summary of Statistics}
 \textbf{The Explanatory Variables}
 
-\noindent The table below (Table 1) gives mean, standard deviation and 2-tailed p-values for the three explanatory variables over our sample period. The mean of the market risk premium, 0.82\%, (annualised at 9.84\%), is much higher than what Fama and French reported (0.43\%) for their sample period of between 1963 and 1991. 
+\noindent The table below (Table 01) gives mean, standard deviation and 2-tailed p-values for the three explanatory variables over our sample period. The mean of the market risk premium, 0.82\%, (annualised at 9.84\%), is much higher than what Fama and French reported (0.43\%) for their sample period of between 1963 and 1991. 
 
 
 \begin{figure}[h]
 	\centering
-	\caption*{Table 1: Descriptive Statistics of the Explanatory Variables}
+	\caption*{Table 01: Descriptive Statistics of the Explanatory Variables}
 	\includegraphics[width=0.45\linewidth]{A1.png}
 	\label{fig:label}
 \end{figure}
@@ -155,42 +155,42 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 
 \noindent \textbf{The Dependent Variables}   
 
-\noindent The table below (Table 2) lists the average annual number of firms in each portfolio over our sample period. Based on these averages, 61.7\% of firms lie in the union of smallest cap quintile and lowest BE/ME quintiles (as underlined).
+\noindent The table below (Table 02) lists the average annual number of firms in each portfolio over our sample period. Based on these averages, 61.7\% of firms lie in the union of smallest cap quintile and lowest BE/ME quintiles (as underlined).
 
 \begin{figure}[h]
 	\centering
-	\caption*{Table 2: Average Number of Firms in Quintile-Based Portfolios}
+	\caption*{Table 02: Average Number of Firms in Quintile-Based Portfolios}
 	\includegraphics[width=0.5\linewidth]{A3.png}
 	\label{fig:label}
 \end{figure}
 
-\noindent The table below (Table 3) denotes the average monthly excess return for the 25 quintile-based portfolios over our sample period. We observed a moderate (but in some cases inconsistent) trend of excess portfolio returns increasing with size quintiles. There was also an observed moderate trend of excess portfolio returns decreasing with BE/ME quintiles for Size quintiles 2 through 5.
+\noindent The table below (Table 03) denotes the average monthly excess return for the 25 quintile-based portfolios over our sample period. We observed a moderate (but in some cases inconsistent) trend of excess portfolio returns increasing with size quintiles. There was also an observed moderate trend of excess portfolio returns decreasing with BE/ME quintiles for Size quintiles 2 through 5.
 
 \begin{figure}[h]
 	\centering
-	\caption*{Table 3: Mean of Monthly Eccess Return}
+	\caption*{Table 03: Mean of Monthly Eccess Return}
 	\includegraphics[width=0.48\linewidth]{A4.png}
 	\label{fig:label}
 \end{figure}
 
 \section{Time-Series Regression Results}
 
-\noindent An outline of the results of our linear regression study is summarised in Table 4. We were unable to reject our null hypothesis of $a=0$ for all but one of our 25 quintile-based portfolios (S1B1, as highlighted). This result was encouraging as a starting point as it implies a near-absence of abnormal returns in Fama and French's (1993) three-factor model over the sample period, lending some credence to our case supporting the model's ability to explain stock return variations. 
+\noindent An outline of the results of our linear regression study is summarised in Table 04. We were unable to reject our null hypothesis of $a=0$ for all but one of our 25 quintile-based portfolios (S1B1, as highlighted). This result was encouraging as a starting point as it implies a near-absence of abnormal returns in Fama and French's (1993) three-factor model over the sample period, lending some credence to our case supporting the model's ability to explain stock return variations. 
 
 \begin{figure}[h]
 	\centering
-	\caption*{Table 4: Regression Summary for FF3 Model 2011-2018}
+	\caption*{Table 04: Regression Summary for FF3 Model 2011-2018}
 	\includegraphics[width=0.9\linewidth]{A5.png}
 	\label{fig:label}
 \end{figure}
 
 \noindent Devling deeper into the individual slope coefficients of the explanatory variables, we found that the t-test results for slope coefficients $b$ allowed for the rejection of null hypothesis $b=0$. As anticipated, the values of the slope coefficients $b$ were all observed to be close to 1, suggesting little variations in the sensitivities to the market portfolio (if any) between the 25 quintile-based portfolios. Further, the computed t-statistics for slope coefficients $s$ were mostly large enough for the rejection of the null hypothesis $s=0$, with said coefficients seen to be monotonically decreasing with increasing Size. That said, some relative weak t-values for $s$ were seen for portfolios in the Big quintile (S5). As with the case of $s$, the t-statistics for slope coefficients $h$ were mostly large enough for the rejection of the null hypothesis $h=0$, though relatively weak t-statistics were observed for the second BE/ME quintile (B2). $h$ was seen to be increasingly monotonically with increasing BE/ME. Also, the R-squared and adjusted R-squared values for all the regressions run were observed to be extremely significant too.\\
 
-\noindent We also ran a regression study using the standard CAPM in order to highlight the superiority of Fama and French's (1993) three-factor model over the standard one-factor CAPM in terms of explanatory power over U.S. stock returns. Results are tabulated below (Table 5). Generally, the magnitudes of the t-statistics for the intercept term $a$ are much greater than they what we observed from regressions run using the three-factor model, implying that the CAPM alone may not well explain most of variations in U.S. stock returns. Further, the intercept terms $a$ were seen to be increasing with Size, in line with our observed negative mean SMB reading and suggesting that a Size effect may well be in play over our sample period (Banz also noted a size effect in his 1981 study, though his results were in favour of Small firms). The lower R-squared and adjusted R-squared readings computed for regressions run using the CAPM compared to the ones run using the three-factor model also point to the superiority of the latter. Further, regressions run using the three-factor model resulted in lower AIC values compared to those run using the CAPM, suggesting that the three-factor model's incremental explanatory power comes without offsetting overfitting.
+\noindent We also ran a regression study using the standard CAPM in order to highlight the superiority of Fama and French's (1993) three-factor model over the standard one-factor CAPM in terms of explanatory power over U.S. stock returns. Results are tabulated below (Table 05). Generally, the magnitudes of the t-statistics for the intercept term $a$ are much greater than they what we observed from regressions run using the three-factor model, implying that the CAPM alone may not well explain most of variations in U.S. stock returns. Further, the intercept terms $a$ were seen to be increasing with Size, in line with our observed negative mean SMB reading and suggesting that a Size effect may well be in play over our sample period (Banz also noted a size effect in his 1981 study, though his results were in favour of Small firms). The lower R-squared and adjusted R-squared readings computed for regressions run using the CAPM compared to the ones run using the three-factor model also point to the superiority of the latter. Further, regressions run using the three-factor model resulted in lower AIC values compared to those run using the CAPM, suggesting that the three-factor model's incremental explanatory power comes without offsetting overfitting.
 
 \begin{figure}[h]
 	\centering
-	\caption*{Table 5: Regression Summary for CAPM 2011-2018}
+	\caption*{Table 05: Regression Summary for CAPM 2011-2018}
 	\includegraphics[width=0.9\linewidth]{A6.png}
 	\label{fig:label}
 \end{figure}
@@ -213,27 +213,27 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.9\linewidth]{SMB01}
-	\caption*{Fig 01: SMB Portfolio \& Rolling 7-Year Average SMB Returns}
+	\caption*{Figure 01: SMB Portfolio \& Rolling 7-Year Average SMB Returns}
 	\label{fig:label}
 \end{figure}
 
-\noindent The rolling 7-year SMB average plotted in Fig 01 (grey column chart) shows how the SMB factor realisations have trended in and out of positive territories over our extended sample period. The fluctuations in the level of our constructed SMB Portfolio (blue line chart in Fig 01, starting portfolio size = 100) also highlight the earlier-mentioned point, though the net gain the portfolio has clocked over the extended sample period suggests that SMB factor realisations are still on average, positive. The sample period used in our main study (July 2011 - December 2018) happens to denote a time period when rolling 7-year average SMB factor realisations have once again flipped over to the negative regions, thus explaining the divergence between our observed mean SMB and that of Fama and French (1993).
+\noindent The rolling 7-year SMB average plotted in Figure 01 (grey column chart) shows how the SMB factor realisations have trended in and out of positive territories over our extended sample period. The fluctuations in the level of our constructed SMB Portfolio (blue line chart in Figure 01, starting portfolio size = 100) also highlight the earlier-mentioned point, though the net gain the portfolio has clocked over the extended sample period suggests that SMB factor realisations are still on average, positive. The sample period used in our main study (July 2011 - December 2018) happens to denote a time period when rolling 7-year average SMB factor realisations have once again flipped over to the negative regions, thus explaining the divergence between our observed mean SMB and that of Fama and French (1993).
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.9\linewidth]{SMB02}
-	\caption*{Fig 02: Small Portfolio vs. Big Portfolio}
+	\caption*{Figure 02: Small Portfolio vs. Big Portfolio}
 	\label{fig:label}
 \end{figure}
 
-\noindent Delving deeper, we found that the main driver behind the recent downtrend in rolling 7-year average SMB factor realisations stem mainly from rolling 7-year Big portfolio returns (grey line chart in Fig 02) seeing higher returns growth than rolling 7-year Small portfolio returns (blue line chart in Fig 01), thus gradually closing and even reversing the Small Minus Big (SMB) gap.  It remains to be seen when the long SMB play will be back in vogue, if ever. A summary of descriptive statistics of the SMB factor and our constructed SMB portfolio can be found below (see Table 07).
+\noindent Delving deeper, we found that the main driver behind the recent downtrend in rolling 7-year average SMB factor realisations stem mainly from rolling 7-year Big portfolio returns (grey line chart in Figure 02) seeing higher returns growth than rolling 7-year Small portfolio returns (blue line chart in Figure 01), thus gradually closing and even reversing the Small Minus Big (SMB) gap.  It remains to be seen when the long SMB play will be back in vogue, if ever. A summary of descriptive statistics of the SMB factor and our constructed SMB portfolio can be found below (see Table 06).
 
 \newpage
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{SMB03}
-	\caption*{Table 07: SMB Factor Summary Statistics}
+	\caption*{Table 06: SMB Factor Summary Statistics}
 	\label{fig:label}
 \end{figure}
 
@@ -244,7 +244,7 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.9\linewidth]{HML01}
-	\caption*{Fig 03: HML Portfolio \& Rolling 7-Year Average HML Returns}
+	\caption*{Figure 03: HML Portfolio \& Rolling 7-Year Average HML Returns}
 	\label{fig:label}
 \end{figure}
 
@@ -253,16 +253,16 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.9\linewidth]{HML02}
-	\caption*{Fig 04: High Portfolio vs. Low Portfolio}
+	\caption*{Figure 04: High Portfolio vs. Low Portfolio}
 	\label{fig:label}
 \end{figure}
 
-\noindent It was also observed that our constructed HML portfolio has grossly outperformed our constructed SMB portfolio over the extended sample period in terms of nominal returns. The HML portfolio clocked 3,200.59\% returns while the SMB portfolio only clocked 500.96\%, with the latter's Sharpe ratio coming up as negative for returns over the extended sample period. With that said, both long SMB and long HML strategies have fallen short during our original sample period of between July 2011 to December 2018. A summary of descriptive statistics of the HML factor and our constructed HML portfolio can be found below (see Table 08).
+\noindent It was also observed that our constructed HML portfolio has grossly outperformed our constructed SMB portfolio over the extended sample period in terms of nominal returns. The HML portfolio clocked 3,200.59\% returns while the SMB portfolio only clocked 500.96\%, with the latter's Sharpe ratio coming up as negative for returns over the extended sample period. With that said, both long SMB and long HML strategies have fallen short during our original sample period of between July 2011 to December 2018. A summary of descriptive statistics of the HML factor and our constructed HML portfolio can be found below (see Table 07).
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{HML03}
-	\caption*{Table 08: HML Factor Summary Statistics}
+	\caption*{Table 07: HML Factor Summary Statistics}
 	\label{fig:label}
 \end{figure}
 
@@ -275,7 +275,7 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.9\linewidth]{UMD01}
-	\caption*{Fig 05: UMD Portfolio \& Rolling 7-Year Average UMD Returns}
+	\caption*{Figure 05: UMD Portfolio \& Rolling 7-Year Average UMD Returns}
 	\label{fig:label}
 \end{figure}
 
@@ -284,11 +284,11 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{UMD02}
-	\caption*{Table 09: UMD Factor Summary Statistics}
+	\caption*{Table 08: UMD Factor Summary Statistics}
 	\label{fig:label}
 \end{figure}
 
-\noindent In terms of cumulative returns, the long UMD play has grossly outperformed both the long SMB play and the long HML play, with cumulative nominal returns of 24,252.43\% observed over the extended sample period and 24.18\% over the original sample period. On a risk-adjusted basis and in terms of Sharpe ratios, the long UMD outperforms the long SMB play and the long HML play too. A summary of descriptive statistics of the UMD factor and our constructed UMD portfolio can be found above (see Table 09).
+\noindent In terms of cumulative returns, the long UMD play has grossly outperformed both the long SMB play and the long HML play, with cumulative nominal returns of 24,252.43\% observed over the extended sample period and 24.18\% over the original sample period. On a risk-adjusted basis and in terms of Sharpe ratios, the long UMD outperforms the long SMB play and the long HML play too. A summary of descriptive statistics of the UMD factor and our constructed UMD portfolio can be found above (see Table 08).
 
 
 	\section{Conclusion} % Numbered section
