--- a/Report/report_v5.tex
+++ b/Report/report_v5.tex
@@ -55,7 +55,7 @@
 	
 	``\textit{The three stock-market factors suggested by Eugene F. Fama and Kenneth R. French in their 1993 paper titled “Common Risk Factors in the Returns on Stocks and Bonds” do not significantly explain the returns of stocks listed on the NYSE, NASDAQ and AMEX for the period between July 2011 and December 2018.}" \\
 
-	\noindent which if disproved, further validates the findings of Fama and French (1993), even in today's age.
+	\noindent which if disproved, further validates the findings of Fama and French (1993), even in today's age. To achieve this, we replicated Fama and French's (1993) original study by constructing, from ground up, their proposed three stock market factors ($R_M-R_f$, SMB and HML) and 25 quintile-based portfolios using data provided by Wharton Research Data Services (WRDS). We then regressed the monthly readings of the constructed three stock market factors (the explanatory variables) against the monthly returns of the 25 quintile-based portfolios (the dependent variables) for our sample period of between July 2011 and December 2018. 
 	
 \newpage
 		
@@ -150,7 +150,7 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 	\label{fig:label}
 \end{figure}
 
-\noindent Also, it was observed that the signs of our observed mean SMB and HML values are in contrast with what Fama and French (1993) observed, a phenomenon which is further investigated in Section 7. The negative mean SMB reading was found to be statistically significant at the 5\% level, albeit mildly so, while the negative  mean HML reading was found to be statistically indifferent from 0 at the 5\% level. 
+\noindent Also, it was observed that the signs of our observed mean SMB and HML values are in contrast with what Fama and French (1993) observed, a phenomenon which is further investigated in Section 7. The negative mean SMB reading was found to be statistically significant at the 5\% level, albeit mildly so, while the negative  mean HML reading was found to be statistically indifferent from 0 at the 5\% level. \\
 
 
 \noindent \textbf{The Dependent Variables}   
@@ -186,7 +186,7 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 
 \noindent Devling deeper into the individual slope coefficients of the explanatory variables, we found that the t-test results for slope coefficients $b$ allowed for the rejection of null hypothesis $b=0$. As anticipated, the values of the slope coefficients $b$ were all observed to be close to 1, suggesting little variations in the sensitivities to the market portfolio (if any) between the 25 quintile-based portfolios. Further, the computed t-statistics for slope coefficients $s$ were mostly large enough for the rejection of the null hypothesis $s=0$, with said coefficients seen to be monotonically decreasing with increasing Size. That said, some relative weak t-values for $s$ were seen for portfolios in the Big quintile (S5). As with the case of $s$, the t-statistics for slope coefficients $h$ were mostly large enough for the rejection of the null hypothesis $h=0$, though relatively weak t-statistics were observed for the second BE/ME quintile (B2). $h$ was seen to be increasingly monotonically with increasing BE/ME. Also, the R-squared and adjusted R-squared values for all the regressions run were observed to be extremely significant too.\\
 
-\noindent We also ran a regression study using the standard CAPM in order to highlight the superiority of Fama and French's (1993) three-factor model over the standard one-factor CAPM in terms of explanatory power over U.S. stock returns. Results are tabulated below (Table 05). Generally, the magnitudes of the t-statistics for the intercept term $a$ are much greater than they what we observed from regressions run using the three-factor model, implying that the CAPM alone may not well explain most of variations in U.S. stock returns. Further, the intercept terms $a$ were seen to be increasing with Size, in line with our observed negative mean SMB reading and suggesting that a Size effect may well be in play over our sample period (Banz also noted a size effect in his 1981 study, though his results were in favour of Small firms). The lower R-squared and adjusted R-squared readings computed for regressions run using the CAPM compared to the ones run using the three-factor model also point to the superiority of the latter. Further, regressions run using the three-factor model resulted in lower AIC values compared to those run using the CAPM, suggesting that the three-factor model's incremental explanatory power comes without offsetting overfitting.
+\noindent We also ran a regression study using the standard CAPM in order to highlight the superiority of Fama and French's (1993) three-factor model over the standard one-factor CAPM in terms of explanatory power over U.S. stock returns. Results are tabulated below (Table 05). Generally, the magnitudes of the t-statistics for the intercept term $a$ are much greater than they what we observed from regressions run using the three-factor model, implying that the CAPM alone may not well explain most of variations in U.S. stock returns. Further, the intercept terms $a$ were seen to be increasing with Size, in line with our observed negative mean SMB reading and suggesting that a Size effect may well be in play over our sample period (Banz also noted a size effect in his 1981 study, though his results were in favour of Small firms). The lower R-squared and adjusted R-squared readings computed for regressions run using the CAPM compared to the ones run using the three-factor model also point to the superiority of the latter. Further, regressions run using the three-factor model resulted in lower AIC values compared to those run using the CAPM, suggesting that the three-factor model's incremental explanatory power comes without overfitting.
 
 \begin{figure}[h]
 	\centering
