--- a/Report/report_v5.tex
+++ b/Report/report_v5.tex
@@ -22,7 +22,7 @@
 	
 		\section{Abstract} % Numbered section
 	
-		This paper outlines the results of a validity test we have conducted on the Fama and French (1993) three-factor model on eligible stocks listed in NYSE, NASDAQ and AMEX for the period between July 2011 to December 2018 (the sample period). After conducting our analysis and running several statistical tests, we have arrived at the conclusion that Fama and French (1993) three-factor model continues to display extremely significant explanatory power over U.S. stock returns (proxied by the returns on our constructed quintile-based portfolios) during the sample period. We also found the three-factor model to be superior to the one-factor CAPM in terms of explanatory power over U.S. stock returns during the sample period. However, we found that the Small Minus Big (SMB) and the High Minus Low (HML) factors can be slightly lacking in terms of statistical significance when it comes to a few of our constructed quintile-based portfolios, although the overall adjusted R-squared values of the regression studies on those quintile-based portfolios remain significant. Further, in contrast to the findings published by Fama and French (1993), we found that Big companies displayed higher mean returns than Small companies over the sample period (negative mean SMB), with said mean excess return being statistically significant at the 5\% level. Companies with Low book-to-market equity were also observed to have displayed higher mean returns than those with High book-to-market equity (negative mean HML) though this was found to be statistically insignificant at the 5\% level. A deeper dive into the divergence of our observed mean SMB and HML readings from those observed by Fama and French (1993) revealed a noteworthy shift away from thematic "long SMB" and "long HML" plays over the recent decade.
+		This paper outlines the results of a validity test we have conducted on the Fama and French (1993) three-factor model on eligible stocks listed in NYSE, NASDAQ and AMEX for the period between July 2011 to December 2018 (the sample period). After conducting our analysis and running several statistical tests, we have arrived at the conclusion that the Fama and French (1993) three-factor model continues to display extremely significant explanatory power over U.S. stock returns (proxied by the returns on our constructed quintile-based portfolios) during the sample period. We also found the three-factor model to be superior to the one-factor CAPM in terms of explanatory power over U.S. stock returns during the sample period. However, we found that the Small Minus Big (SMB) and the High Minus Low (HML) factors can be slightly lacking in terms of statistical significance when it comes to a few of our constructed quintile-based portfolios, although the overall adjusted R-squared values of the regression studies on those quintile-based portfolios remain significant. Further, in contrast to the findings published by Fama and French (1993), we found that Big companies displayed higher mean returns than Small companies over the sample period (negative mean SMB), with said mean excess return being statistically significant at the 5\% level. Companies with Low book-to-market equity were also observed to have displayed higher mean returns than those with High book-to-market equity (negative mean HML) though this was found to be statistically insignificant at the 5\% level. A deeper dive into the divergence of our observed mean SMB and HML readings from those observed by Fama and French (1993) revealed a noteworthy shift away from thematic "long SMB" and "long HML" plays over the recent decade.
 	
 	\section{Introduction \& Literature Review} % Numbered section
 	
