--- a/Report/report_v5.tex
+++ b/Report/report_v5.tex
@@ -146,11 +146,11 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\caption*{Table 01: Descriptive Statistics of the Explanatory Variables}
-	\includegraphics[width=0.45\linewidth]{A1.png}
+	\includegraphics[width=0.46\linewidth,trim=4 4 4 4,clip]{A1.png}
 	\label{fig:label}
 \end{figure}
 
-\noindent Also, it was observed that the signs of our observed mean SMB and HML values are in contrast with what Fama and French (1993) observed, a phenomenon which is further investigated in Section 7. The negative mean SMB reading was found to be statistically significant at the 5\% level, albeit mildly so, while the negative  mean HML reading was found to be statistically indifferent from 0 at the 5\% level. \\
+\noindent It was also noted that the signs of our observed mean SMB and HML values are in contrast with what Fama and French's (1993), a phenomenon further investigated in Section 7. The negative mean SMB reading was found to be mildly statistically significant at the 5\% level, while the negative mean HML reading is statistically indifferent from 0 at the 5\% level. \\
 
 
 \noindent \textbf{The Dependent Variables}   
@@ -160,18 +160,20 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\caption*{Table 02: Average Number of Firms in Quintile-Based Portfolios}
-	\includegraphics[width=0.5\linewidth]{A3.png}
+	\includegraphics[width=0.64\linewidth,trim=4 4 4 4,clip]{A3.png}
 	\label{fig:label}
 \end{figure}
 
-\noindent The table below (Table 03) denotes the average monthly excess return for the 25 quintile-based portfolios over our sample period. We observed a moderate (but in some cases inconsistent) trend of excess portfolio returns increasing with size quintiles. There was also an observed moderate trend of excess portfolio returns decreasing with BE/ME quintiles for Size quintiles 2 through 5.
+\noindent The table below (Table 03) denotes the average monthly excess return for the 25 quintile-based portfolios over our sample period. We observed a moderate trend of excess portfolio returns increasing with size quintiles. There was also an observed moderate trend of excess portfolio returns decreasing with BE/ME quintiles for Size quintiles 2 through 5.
 
 \begin{figure}[h]
 	\centering
-	\caption*{Table 03: Mean of Monthly Eccess Return}
-	\includegraphics[width=0.48\linewidth]{A4.png}
+	\caption*{Table 03: Means of Monthly Excess Returns}
+	\includegraphics[width=0.64\linewidth,trim=4 4 4 4,clip]{A4.png}
 	\label{fig:label}
 \end{figure}
+
+\newpage
 
 \section{Time-Series Regression Results}
 
@@ -180,7 +182,7 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\caption*{Table 04: Regression Summary for FF3 Model 2011-2018}
-	\includegraphics[width=0.9\linewidth]{A5.png}
+	\includegraphics[width=0.88\linewidth,trim=4 4 4 4,clip]{A5.png}
 	\label{fig:label}
 \end{figure}
 
@@ -191,7 +193,7 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \begin{figure}[h]
 	\centering
 	\caption*{Table 05: Regression Summary for CAPM 2011-2018}
-	\includegraphics[width=0.9\linewidth]{A6.png}
+	\includegraphics[width=0.88\linewidth,trim=4 4 4 4,clip]{A6.png}
 	\label{fig:label}
 \end{figure}
 
@@ -200,73 +202,83 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 \section{SMB, HML and UMD: A Deeper Dive}
 
 
-\noindent While our findings are generally in line with and supportive of the three-factor model first introduced by Fama and French (1993), a point of divergence arises from our observed mean values of SMB and HML over our sample period. We observed mean values of -0.59\% (statistically significant at the 5\% level) and -0.35\% (statistically insignificant at the 5\% level) for our SMB and HML values respectively, which comes in contrast to Fama and French's (1993) observed mean values of 0.27\% and 0.40\%, especially with regards to the signs of the means. The sign of our observed mean $R_m - R_f$ factor is in line with the one observed in original Fama and French (1993) study. We also look into an additional factor, Up Minus Down (UMD), a proxy for stock return momentum, in this section.\\
+\noindent While our findings are generally in line with and supportive of the three-factor model first introduced by Fama and French (1993), a point of divergence arises from our observed mean values of SMB and HML over our sample period. We observed mean values of -0.59\% (statistically significant at the 5\% level) and -0.35\% (statistically insignificant at the 5\% level) for our SMB and HML values respectively, which comes in contrast to Fama and French's (1993) observed mean values of 0.27\% and 0.40\%, especially with regards to the signs of the means. \\
 
-\noindent To further examine the behaviour of the SMB, HML and UMD factors over time and how the mean factor realisations can possibly diverge, we treated the factor realisations as actual portfolio returns and tracked the cumulative returns of the constructed portfolios over time. \\
+\noindent The sign of our observed mean $R_m - R_f$ factor is in line with the one observed in original Fama and French (1993) study. We also look into an additional factor, Up Minus Down (UMD), a proxy for stock return momentum, in this section. To further examine the behaviour of the SMB, HML and UMD factors over time and how the mean factor realisations can possibly diverge, we treated the factor realisations as actual portfolio returns and tracked the cumulative returns of the constructed portfolios over time.\\
 
 \noindent For this purpose, we utilised monthly Fama-French Factors data between January 1929 to December 2018 provided by WRDS and plotted the cumulative returns of the respective portfolio over this extended sample period. Also, given how monthly SMB, HML and UMD factor realisations tend to have a high level of noise from month to month, we used 7-year rolling averages of the SMB, HML and UMD readings as a gauge of the changes in the broader trends of the respective time series.\\
 
 \noindent \textbf{The SMB Factor}
 
-\noindent For the SMB factor, we found that the factor realisations do not exhibit consistently positive readings over our sample period, though said SMB readings are, on average, mildly positive (at 0.21\%). When using the SMB factor as a proxy, we also observed that the small-firm effect highlighted by Banz (1981) quickly dissipated and even reversed in the years following the publication of his findings, though these two events may have had happened by mere coincidence.
+\noindent For the SMB factor, we found that the factor realisations do not exhibit consistently positive readings over our sample period, though said SMB readings are, on average, mildly positive (at 0.21\%). When using the SMB factor as a proxy, we also observed that the small-firm effect highlighted by Banz (1981) quickly dissipated and even reversed in the years following the publication of his findings, though these two events may have had happened by mere coincidence.\\
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\linewidth]{SMB01}
+	\includegraphics[width=0.83\linewidth,trim=4 4 4 4,clip]{SMB01}
 	\caption*{Figure 01: SMB Portfolio \& Rolling 7-Year Average SMB Returns}
 	\label{fig:label}
 \end{figure}
 
-\noindent The rolling 7-year SMB average plotted in Figure 01 (grey column chart) shows how the SMB factor realisations have trended in and out of positive territories over our extended sample period. The fluctuations in the level of our constructed SMB Portfolio (blue line chart in Figure 01, starting portfolio size = 100) also highlight the earlier-mentioned point, though the net gain the portfolio has clocked over the extended sample period suggests that SMB factor realisations are still on average, positive. The sample period used in our main study (July 2011 - December 2018) happens to denote a time period when rolling 7-year average SMB factor realisations have once again flipped over to the negative regions, thus explaining the divergence between our observed mean SMB and that of Fama and French (1993).
+\newpage
+
+\noindent The rolling 7-year SMB average plotted in Figure 01 (grey column chart) shows how the SMB factor realisations have trended in and out of positive territories over our extended sample period. The fluctuations in the level of our constructed SMB Portfolio (blue line chart in Figure 01, starting portfolio size = 100) also highlight the earlier-mentioned point, though the net gain the portfolio has clocked over the extended sample period suggests that SMB factor realisations are still on average, positive. \\
+
+\noindent The sample period used in our main study (July 2011 - December 2018) happens to denote a time period when rolling 7-year average SMB factor realisations have once again flipped over to the negative regions, thus explaining the divergence between our observed mean SMB and that of Fama and French (1993).
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\linewidth]{SMB02}
+	\includegraphics[width=0.83\linewidth,trim=4 4 4 4,clip]{SMB02}
 	\caption*{Figure 02: Small Portfolio vs. Big Portfolio}
 	\label{fig:label}
 \end{figure}
 
-\noindent Delving deeper, we found that the main driver behind the recent downtrend in rolling 7-year average SMB factor realisations stem mainly from rolling 7-year Big portfolio returns (grey line chart in Figure 02) seeing higher returns growth than rolling 7-year Small portfolio returns (blue line chart in Figure 01), thus gradually closing and even reversing the Small Minus Big (SMB) gap.  It remains to be seen when the long SMB play will be back in vogue, if ever. A summary of descriptive statistics of the SMB factor and our constructed SMB portfolio can be found below (see Table 06).
+\noindent Delving deeper, we found that the main driver behind the recent downtrend in rolling 7-year average SMB factor realisations stem mainly from rolling 7-year Big portfolio returns (grey line chart in Figure 02) seeing higher returns growth than rolling 7-year Small portfolio returns (blue line chart in Figure 01), thus gradually closing and even reversing the Small Minus Big (SMB) gap.\\
+
+\noindent It remains to be seen when the long SMB play will be back in vogue, if ever. A summary of descriptive statistics of the SMB factor and our constructed SMB portfolio can be found below (see Table 06).
 
 \newpage
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.8\linewidth]{SMB03}
+	\includegraphics[width=0.9\linewidth,trim=4 4 4 4,clip]{SMB03}
 	\caption*{Table 06: SMB Factor Summary Statistics}
 	\label{fig:label}
 \end{figure}
 
 \noindent \textbf{The HML Factor}
 
-\noindent Like the SMB factor, the HML factor was observed to exhibit mildly negative mean readings for the period between July 2011 and December 2018, though the HML factor's mean reading of -0.10\% is deemed to be statistically indifferent from 0 at the 5\% significance level. Further, the HML factor was seen to have displayed more consistently and persistently positive readings over the extended sample period of between January 1929 and December 2018 compared to the SMB factor.
+\noindent Like the SMB factor, the HML factor was observed to exhibit mildly negative mean readings for the period between July 2011 and December 2018, though the HML factor's mean reading of -0.10\% is deemed to be statistically indifferent from 0 at the 5\% significance level. Further, the HML factor was seen to have displayed more consistently and persistently positive readings over the extended sample period of between January 1929 and December 2018 compared to the SMB factor. \\
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\linewidth]{HML01}
+	\includegraphics[width=0.83\linewidth,trim=4 4 4 4,clip]{HML01}
 	\caption*{Figure 03: HML Portfolio \& Rolling 7-Year Average HML Returns}
 	\label{fig:label}
 \end{figure}
+
+\newpage
 
 \noindent This inference can be drawn from lesser observed instances of negative rolling 7-year average HML factor readings (consistency) and longer streaks of positive rolling 7-year average HML factor readings (persistence) when compared to those of the SMB factor. This makes the unravelling of the HML factor's positive readings over the recent decade all the more an unprecedented one, which also explains the divergence between our observed mean HML and that of Fama and French (1993). 
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\linewidth]{HML02}
+	\includegraphics[width=0.8\linewidth,trim=4 4 4 4,clip]{HML02}
 	\caption*{Figure 04: High Portfolio vs. Low Portfolio}
 	\label{fig:label}
 \end{figure}
 
-\noindent It was also observed that our constructed HML portfolio has grossly outperformed our constructed SMB portfolio over the extended sample period in terms of nominal returns. The HML portfolio clocked 3,200.59\% returns while the SMB portfolio only clocked 500.96\%, with the latter's Sharpe ratio coming up as negative for returns over the extended sample period. With that said, both long SMB and long HML strategies have fallen short during our original sample period of between July 2011 to December 2018. A summary of descriptive statistics of the HML factor and our constructed HML portfolio can be found below (see Table 07).
+\noindent It was also observed that our constructed HML portfolio has grossly outperformed our constructed SMB portfolio over the extended sample period in terms of nominal returns. 
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.8\linewidth]{HML03}
+	\includegraphics[width=0.9\linewidth,trim=4 4 4 4,clip]{HML03}
 	\caption*{Table 07: HML Factor Summary Statistics}
 	\label{fig:label}
 \end{figure}
 
 \newpage
+
+\noindent The HML portfolio clocked 3,200.59\% returns while the SMB portfolio only clocked 500.96\%, with the latter's Sharpe ratio coming up as negative for returns over the extended sample period. With that said, both long SMB and long HML strategies have fallen short during our original sample period of between July 2011 to December 2018. A summary of descriptive statistics of the HML factor and our constructed HML portfolio can be found above (see Table 07).\\
 
 \noindent \textbf{The UMD Factor}
 
@@ -274,22 +286,23 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\linewidth]{UMD01}
+	\includegraphics[width=0.83\linewidth,trim=4 4 4 4,clip]{UMD01}
 	\caption*{Figure 05: UMD Portfolio \& Rolling 7-Year Average UMD Returns}
 	\label{fig:label}
 \end{figure}
 
-\noindent Like the HML factor, it was observed that the UMD factor is consistently and persistently positive given the relatively high frequency of observed instances of positive rolling 7-year average UMD factor readings (consistency) and the long streaks of positive rolling 7-year average UMD factor readings (persistence). Also, like the SMB and HML factors, we observed an unravelling of the long UMD play in the recent decade, though said unravelling took place relatively earlier from April 2009 and has already recovered since April 2016. 
+\noindent Like the HML factor, it was observed that the UMD factor is consistently and persistently positive given the relatively high frequency of observed instances of positive rolling 7-year average UMD factor readings (consistency) and the long streaks of positive rolling 7-year average UMD factor readings (persistence). Also, like the SMB and HML factors, we observed an unravelling of the long UMD play in the recent decade, though said unravelling took place relatively earlier from April 2009 and has already recovered since April 2016. \\
+
+\noindent In terms of cumulative returns, the long UMD play has grossly outperformed both the long SMB play and the long HML play, with cumulative nominal returns of 24,252.43\% observed over the extended sample period and 24.18\% over the original sample period. On a risk-adjusted basis and in terms of Sharpe ratios, the long UMD outperforms the long SMB play and the long HML play too. A summary of descriptive statistics of the UMD factor and our constructed UMD portfolio can be found below (see Table 08).
+
+\newpage
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.8\linewidth]{UMD02}
+	\includegraphics[width=0.9\linewidth,trim=4 4 4 4,clip]{UMD02}
 	\caption*{Table 08: UMD Factor Summary Statistics}
 	\label{fig:label}
 \end{figure}
-
-\noindent In terms of cumulative returns, the long UMD play has grossly outperformed both the long SMB play and the long HML play, with cumulative nominal returns of 24,252.43\% observed over the extended sample period and 24.18\% over the original sample period. On a risk-adjusted basis and in terms of Sharpe ratios, the long UMD outperforms the long SMB play and the long HML play too. A summary of descriptive statistics of the UMD factor and our constructed UMD portfolio can be found above (see Table 08).
-
 
 	\section{Conclusion} % Numbered section
 	\noindent In our view, we have accomplished our research objective to disprove our null hypothesis and support the case that the Fama and French (1993) three-factor model does significantly explain the returns of stocks listed on the NYSE, NASDAQ and AMEX for the period between July 2011 and December 2018. This view is well-supported by the extremely high and significant adjusted R-squared values obtained as a result of our regression study on the constructed quintile-based portfolios.\\
@@ -297,6 +310,8 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 	\noindent We were also able to highlight the three-factor model's superiority over the one-factor CAPM by way of the former's superior adjusted R-squared and AIC results over the latter's. The numerous statistically significantly negative intercept $a$ terms found in our CAPM regression study, a phenomenon not seen in our three-factor model regression study, also suggests that excess market returns alone are not sufficient to explain variations in stock returns, and that the three-factor model may have done the job of better explaining them. Further, we managed to obtain a few possible explanations for our divergent mean SMB and HML readings from Fama and French's (1993) original study, which in no way weakens our case supporting the three-factor model but rather highlights a shift in the profitability of certain thematic plays in recent times.\\
 	
 	\noindent Overall, it was interesting to note that Fama and French's (1993) three-factor model continues to be relevant, even in more modern times and despite the rise of other viable stock return factors to prominence. The study of factor-based modelling of stock returns continues to evolve, and we will continue to keep our eyes peeled for fresh developments in this space.
+	
+	\newpage
 
 	\section{References} % Numbered section
 	\begin{itemize}
