--- a/Report/report_v5.tex
+++ b/Report/report_v5.tex
@@ -26,7 +26,7 @@
 	
 	\section{Introduction \& Literature Review} % Numbered section
 	
-	The emergence of Modern Portfolio Theory introduced by Markowitz (1952) has set the foundation for portfolio management research, and has spurred an outpouring of research of a similar focus. The Capital Asset Pricing Model (CAPM) developed by harpe (1964), Lintner (1965) and Black (1972) is a result of such an outpouring. The CAPM attempts to explain stock returns using excess market returns as an all-encompassing risk factor, an idea which was quickly popularised, but has since been met with much scrutiny and many empirical contradictions. Amongst the critics of the CAPM are Fama and French (1993), who have built a case arguing that market excess returns alone do not fully explain cross-sectional variations in equity returns and that the addition of two empirically-backed factors are better explaining said variations. The model is also known as the Fama and French (1993) three-factor model:
+	The emergence of Modern Portfolio Theory introduced by Markowitz (1952) has set the foundation for portfolio management research, and has spurred an outpouring of research of a similar focus. The Capital Asset Pricing Model (CAPM) developed by Sharpe (1964), Lintner (1965) and Black (1972) is a result of such an outpouring. The CAPM attempts to explain stock returns using excess market returns as an all-encompassing risk factor, an idea which was quickly popularised, but has since been met with much scrutiny and many empirical contradictions. Amongst the critics of the CAPM are Fama and French (1993), who have built a case arguing that market excess returns alone do not fully explain cross-sectional variations in equity returns and that the addition of two empirically-backed factors are better explaining said variations. The model is also known as the Fama and French (1993) three-factor model:
 	
 	$$
 	R(t) - R_f(t) = a+ b(R_{mkt} - R_f) + s(SMB) + h(HML) +\epsilon_i
@@ -318,35 +318,19 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 		\item Markowitz, H. (1952). Portfolio selection. The Journal of Finance, 7(1), 77-91.
 		\item Sharpe, W. (1964). Capital asset prices: A theory of market equilibrium under conditions of risk. Journal of Finance, 19(3), 425-442.
 		\item Lintner, J. (1965). The valuation of risk assets and the selection of risky investments in stock portfolios and capital budgets. Review of Economics and Statistics, 47(1), 12-37.
+		\item Black, Fischer. Michael C. Jensen. and Myron Scholes. (1972). The capital asset pricing model: Some empirical tests. in: M. Jensen. ed.. Studies In the theory of capital markets (Praeger, New York, NY).
 		\item Fama, E., \& French, K. (1993). Common risk factors in the returns on stocks and bonds.Journal of Financial Economics, 33(1), 3-56..
-		\item Black, Fischer. Michael C. Jensen. and Myron Scholes. 1971. The capital asset pricing model: Some empirical tests. in: M. Jensen. ed.. Studies In the theory of capital markets (Praeger, New York, NY).
-		\item Fama. Eugene F. and Kenneth R. French. 1992a. The cross-section of expected stock returns.Journal of Finance 47, 427 - 465.
-		\item Fama. Eugene F. and Kenneth R. French. 1992b. The economic fundamentals of size and book-to-market equity. Working paper (Graduate School of Business. Cniversity of Chicago. Chicago. IL).
-		\item Elton; Gruber; Blake (1996). "Survivorship Bias and Mutual Fund Performance"
+		\item Fama. Eugene F. and Kenneth R. French. (1992a). The cross-section of expected stock returns.Journal of Finance 47, 427 - 465.
 		\item Banz. Rolf W.. 1981. The relationship between return and market value of common stocks, Journal	of Financial Economics 9. 3-15.
-		\item Bhandari. Laxmi Chand. 1983. Debt,equity ratto and e.xpected common stock returns: Empirical evidence, Journal of Finance 43. 507-528.
-		\item Rosenberg. Barr, Kenneth Reid. and Ronald Lanstein. 1985. Persuasive evidence of market inefficiency.Journal of Portfolio Management Il. 9-17.
-		\item Stattman D (1980): Book values and stock returns. The Chicago MBA: A Journal of Selected Papers,4,25–45. 
-		\item Basu. Sanjoy. 1983. The relationship between earnings yield. market value. and return for NYSE common stocks: Further evidence. Journal of Financial Economics 12, 129-156.
 		\item Daniel, K., \& Titman, S. (1997). Evidence on the characteristics of cross sectional variation in stock returns
 		\item Davis, J., Fama, E.,\& French, K. (2000). Characteristics, covariances and average returns: 1927-97. Journal of Finance, 55(1), 389-406
-		\item Fama. Eugene F. and Kenneth R. French. 1996. Multifactor Explanations of Asset Pricing Anomalies. Journal of Finance, 51(1), 55--84
-		\item Pastor, L., Stambaugh, R.F., 2003. Liquidity risk and expected stock returns. Journal of Political Economy 111, 642–685.
-		\item A five-factor asset pricing model. Journal of Financial Economics 116, 1–22.
-		\item Hou, K., Xue, C., Zhang, L., 2015. Digesting anomalies: An investment approach. Review of Financial Studies 28, 650–705.
-	\end{itemize}
+		\item Rosenberg. Barr, Kenneth Reid. and Ronald Lanstein. 1985. Persuasive evidence of market inefficiency.Journal of Portfolio Management Il. 9-17.
+		\item Stattman D (1980): Book values and stock returns. The Chicago MBA: A Journal of Selected Papers,4,25–45. 
+		\item Basu. Sanjoy. (1983). The relationship between earnings yield. market value. and return for NYSE common stocks: Further evidence. Journal of Financial Economics 12, 129-156.
+		\item Bhandari, L. (1988). Debt/Equity Ratio and Expected Common Stock Returns: Empirical Evidence. Journal of Finance, 43, 507-528. 
+		\item Fama. Eugene F. and Kenneth R. French. (2015). A five-factor asset pricing model.Journal of Financial Economics, 116,1–22
+		\item Mark M. Carhart. (1997). On Persistence in Mutual Fund Performance.The Journal of Finance Volume 52, Issue 1
+\end{itemize}
 
 
 \end{document}
-© 2019 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
