--- a/Report/report_v5.tex
+++ b/Report/report_v5.tex
@@ -221,7 +221,7 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 
 \newpage
 
-\noindent The rolling 7-year SMB average plotted in Figure 01 (grey column chart) shows how the SMB factor realisations have trended in and out of positive territories over our extended sample period. The fluctuations in the level of our constructed SMB Portfolio (blue line chart in Figure 01, starting portfolio size = 100) also highlight the earlier-mentioned point, though the net gain the portfolio has clocked over the extended sample period suggests that SMB factor realisations are still on average, positive. \\
+\noindent The rolling 7-year SMB average plotted in Figure 01 (grey column chart) shows how the SMB factor realisations have trended in and out of positive territories over our extended sample period. The fluctuations in the level of our constructed SMB Portfolio (black line chart in Figure 01, starting portfolio size = 100) also highlight the earlier-mentioned point, though the net gain the portfolio has clocked over the extended sample period suggests that SMB factor realisations are still on average, positive. \\
 
 \noindent The sample period used in our main study (July 2011 - December 2018) happens to denote a time period when rolling 7-year average SMB factor realisations have once again flipped over to the negative regions, thus explaining the divergence between our observed mean SMB and that of Fama and French (1993).
 
@@ -232,7 +232,7 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 	\label{fig:label}
 \end{figure}
 
-\noindent Delving deeper, we found that the main driver behind the recent downtrend in rolling 7-year average SMB factor realisations stem mainly from rolling 7-year Big portfolio returns (grey line chart in Figure 02) seeing higher returns growth than rolling 7-year Small portfolio returns (blue line chart in Figure 01), thus gradually closing and even reversing the Small Minus Big (SMB) gap.\\
+\noindent Delving deeper, we found that the main driver behind the recent downtrend in rolling 7-year average SMB factor realisations stem mainly from rolling 7-year Big portfolio returns (grey line chart in Figure 02) seeing higher returns growth than rolling 7-year Small portfolio returns (black line chart in Figure 02), thus gradually closing and even reversing the Small Minus Big (SMB) gap.\\
 
 \noindent It remains to be seen when the long SMB play will be back in vogue, if ever. A summary of descriptive statistics of the SMB factor and our constructed SMB portfolio can be found below (see Table 06).
 
