--- a/Report/report_v5.tex
+++ b/Report/report_v5.tex
@@ -314,28 +314,23 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 	\newpage
 
 	\section{References} % Numbered section
-	\begin{itemize}
-		\item Markowitz, H. (1952). Portfolio selection. The Journal of Finance, 7(1), 77-91.
-		\item Sharpe, W. (1964). Capital asset prices: A theory of market equilibrium under conditions of risk. Journal of Finance, 19(3), 425-442.
-		\item Lintner, J. (1965). The valuation of risk assets and the selection of risky investments in stock portfolios and capital budgets. Review of Economics and Statistics, 47(1), 12-37.
-		\item Fama, E., \& French, K. (1993). Common risk factors in the returns on stocks and bonds.Journal of Financial Economics, 33(1), 3-56..
-		\item Black, Fischer. Michael C. Jensen. and Myron Scholes. 1971. The capital asset pricing model: Some empirical tests. in: M. Jensen. ed.. Studies In the theory of capital markets (Praeger, New York, NY).
-		\item Fama. Eugene F. and Kenneth R. French. 1992a. The cross-section of expected stock returns.Journal of Finance 47, 427 - 465.
-		\item Fama. Eugene F. and Kenneth R. French. 1992b. The economic fundamentals of size and book-to-market equity. Working paper (Graduate School of Business. Cniversity of Chicago. Chicago. IL).
-		\item Elton; Gruber; Blake (1996). "Survivorship Bias and Mutual Fund Performance"
-		\item Banz. Rolf W.. 1981. The relationship between return and market value of common stocks, Journal	of Financial Economics 9. 3-15.
-		\item Bhandari. Laxmi Chand. 1983. Debt,equity ratto and e.xpected common stock returns: Empirical evidence, Journal of Finance 43. 507-528.
-		\item Rosenberg. Barr, Kenneth Reid. and Ronald Lanstein. 1985. Persuasive evidence of market inefficiency.Journal of Portfolio Management Il. 9-17.
-		\item Stattman D (1980): Book values and stock returns. The Chicago MBA: A Journal of Selected Papers,4,25–45. 
-		\item Basu. Sanjoy. 1983. The relationship between earnings yield. market value. and return for NYSE common stocks: Further evidence. Journal of Financial Economics 12, 129-156.
-		\item Daniel, K., \& Titman, S. (1997). Evidence on the characteristics of cross sectional variation in stock returns
-		\item Davis, J., Fama, E.,\& French, K. (2000). Characteristics, covariances and average returns: 1927-97. Journal of Finance, 55(1), 389-406
-		\item Fama. Eugene F. and Kenneth R. French. 1996. Multifactor Explanations of Asset Pricing Anomalies. Journal of Finance, 51(1), 55--84
-		\item Pastor, L., Stambaugh, R.F., 2003. Liquidity risk and expected stock returns. Journal of Political Economy 111, 642–685.
-		\item A five-factor asset pricing model. Journal of Financial Economics 116, 1–22.
-		\item Hou, K., Xue, C., Zhang, L., 2015. Digesting anomalies: An investment approach. Review of Financial Studies 28, 650–705.
-	\end{itemize}
-
+\begin{itemize}
+	\item Markowitz, H. (1952). Portfolio selection. The Journal of Finance, 7(1), 77-91.
+	\item Sharpe, W. (1964). Capital asset prices: A theory of market equilibrium under conditions of risk. Journal of Finance, 19(3), 425-442.
+	\item Lintner, J. (1965). The valuation of risk assets and the selection of risky investments in stock portfolios and capital budgets. Review of Economics and Statistics, 47(1), 12-37.
+	\item Black, Fischer. Michael C. Jensen. and Myron Scholes. (1972). The capital asset pricing model: Some empirical tests. in: M. Jensen. ed.. Studies In the theory of capital markets (Praeger, New York, NY).
+	\item Fama, E., \& French, K. (1993). Common risk factors in the returns on stocks and bonds.Journal of Financial Economics, 33(1), 3-56..
+	\item Fama. Eugene F. and Kenneth R. French. (1992a). The cross-section of expected stock returns.Journal of Finance 47, 427 - 465.
+	\item Banz. Rolf W.. 1981. The relationship between return and market value of common stocks, Journal	of Financial Economics 9. 3-15.
+	\item Daniel, K., \& Titman, S. (1997). Evidence on the characteristics of cross sectional variation in stock returns
+	\item Davis, J., Fama, E.,\& French, K. (2000). Characteristics, covariances and average returns: 1927-97. Journal of Finance, 55(1), 389-406
+	\item Rosenberg. Barr, Kenneth Reid. and Ronald Lanstein. 1985. Persuasive evidence of market inefficiency.Journal of Portfolio Management Il. 9-17.
+	\item Stattman D (1980): Book values and stock returns. The Chicago MBA: A Journal of Selected Papers,4,25–45. 
+	\item Basu. Sanjoy. (1983). The relationship between earnings yield. market value. and return for NYSE common stocks: Further evidence. Journal of Financial Economics 12, 129-156.
+	\item Bhandari, L. (1988). Debt/Equity Ratio and Expected Common Stock Returns: Empirical Evidence. Journal of Finance, 43, 507-528. 
+	\item Fama. Eugene F. and Kenneth R. French. (2015). A five-factor asset pricing model.Journal of Financial Economics, 116,1–22
+	\item Mark M. Carhart. (1997). On Persistence in Mutual Fund Performance.The Journal of Finance Volume 52, Issue 1
+\end{itemize}
 
 \end{document}
 © 2019 GitHub, Inc.
