Updating of biblio

--- a/Report/report_v5.tex
+++ b/Report/report_v5.tex
@@ -321,10 +321,10 @@ After the construction of 6 factor portfolios to obtain the explanatory variable
 	\item Black, Fischer. Michael C. Jensen. and Myron Scholes. (1972). The capital asset pricing model: Some empirical tests. in: M. Jensen. ed.. Studies In the theory of capital markets (Praeger, New York, NY).
 	\item Fama, E., \& French, K. (1993). Common risk factors in the returns on stocks and bonds.Journal of Financial Economics, 33(1), 3-56..
 	\item Fama. Eugene F. and Kenneth R. French. (1992a). The cross-section of expected stock returns.Journal of Finance 47, 427 - 465.
-	\item Banz. Rolf W.. 1981. The relationship between return and market value of common stocks, Journal	of Financial Economics 9. 3-15.
+	\item Banz. Rolf W.. (1981). The relationship between return and market value of common stocks, Journal	of Financial Economics 9. 3-15.
 	\item Daniel, K., \& Titman, S. (1997). Evidence on the characteristics of cross sectional variation in stock returns
 	\item Davis, J., Fama, E.,\& French, K. (2000). Characteristics, covariances and average returns: 1927-97. Journal of Finance, 55(1), 389-406
-	\item Rosenberg. Barr, Kenneth Reid. and Ronald Lanstein. 1985. Persuasive evidence of market inefficiency.Journal of Portfolio Management Il. 9-17.
+	\item Rosenberg. Barr, Kenneth Reid. and Ronald Lanstein. (1985). Persuasive evidence of market inefficiency.Journal of Portfolio Management Il. 9-17.
 	\item Stattman D (1980): Book values and stock returns. The Chicago MBA: A Journal of Selected Papers,4,25–45. 
 	\item Basu. Sanjoy. (1983). The relationship between earnings yield. market value. and return for NYSE common stocks: Further evidence. Journal of Financial Economics 12, 129-156.
 	\item Bhandari, L. (1988). Debt/Equity Ratio and Expected Common Stock Returns: Empirical Evidence. Journal of Finance, 43, 507-528. 
